# wakare

./: .gitignore  CMakeLists.txt  Readme.md  TODO.md  run_tests.sh
docs/: binary-ninja.md  intelpt.md  radare2.md  trace-format.md
include/: disasm.h  perf_file.h  pt_backend.h  ptrace_backend.h  trace.h  trace_writer.h  types.h  utils.h
include/converter/: pt_converter.hh  sqlite_backend.hh  streaming_backend.hh  text_backend.hh
include/dumper/: sqlite_backend.hh  streaming_backend.hh  text_backend.hh
include/extractor/: disassembler.hh  perf_file.hh  pt_extractor.hh
include/tracer/: perf_file.h  utils.h
plugins/binja-wakare/: __init__.py  dbutils.py  plugin.json  view.py
plugins/r2wakare/: Makefile  utils.c  utils.h  wakare.c
proto/: CMakeLists.txt  trace.proto
samples/: build.sh  clean.sh
samples/hex/: main.c
samples/indirect-calls/: main.c
samples/indirect-calls-vtable/: main.c
samples/loop/: main.c
samples/loop-intensive/: main.c
samples/mini-vm/: main.c
samples/multi-small-calls/: main.c
samples/multiple/: main.c
samples/singleblock/: main.c
scripts/: pt_trace.sh  trace_dump.py
src/: disasm.c  main.c  perf_file.c  pt_backend.c  ptrace_backend.c  trace_writer.c  utils.c
src/converter/: disassembler.cpp  main.cpp  perf_file.cpp  pt_converter.cpp  sqlite_backend.cpp  streaming_backend.cpp  text_backend.cpp
src/dumper/: main.cpp  sqlite_backend.cpp  streaming_backend.cpp  text_backend.cpp
src/extractor/: disassembler.cpp  main.cpp  perf_file.cpp  pt_extractor.cpp
src/tracer/: disasm.c  main.c  perf_file.c  pt_backend.c  ptrace_backend.c  trace_writer.c  utils.c
